continue / non-compiling

--- a/src/app/bidding-system-panel/bidding-system-panel.component.html
+++ b/src/app/bidding-system-panel/bidding-system-panel.component.html
@@ -1,3 +1,10 @@
-<p>bidding-system-panel works!</p>
 
-{{ran}}
+<div class="biddingPanel">
+  {{ran}}
+
+  <div class="topline">
+
+
+</div>
+</div>
+
