bids first time visible

--- a/src/app/bidding-system-panel/bidding-system-panel.component.html
+++ b/src/app/bidding-system-panel/bidding-system-panel.component.html
@@ -96,7 +96,7 @@
 
   </div>
 
-<!--  <app-bid-list [bnc]="bnc" [subject]="subject" [editable]="editable"></app-bid-list>-->
+  <app-bid-list [bnc]="bnc" [subject]="subject" [editable]="editable"></app-bid-list>
 
 <!--  <app-linkable-bnode-list [linkableBnodes]="linkableBnodes"-->
 <!--                           (linkNodeEvent)="linkBnode($event)"></app-linkable-bnode-list>-->
