--- a/src/app/bidding-system-panel/bidding-system-panel.component.html
+++ b/src/app/bidding-system-panel/bidding-system-panel.component.html
@@ -1,22 +1,22 @@
-
 <div class="biddingPanel">
   <div class="topline">
-<!--    <app-bnode-sequence (selectNode)="setBnode($event)" [bNodeSequence]="bNodeSequence"-->
-<!--                        (bNodeSequenceEventEmitter)="activateDealView2($event)">-->
-<!--    </app-bnode-sequence>-->
+    <!--    <app-bnode-sequence (selectNode)="setBnode($event)" [bNodeSequence]="bNodeSequence"-->
+    <!--                        (bNodeSequenceEventEmitter)="activateDealView2($event)">-->
+    <!--    </app-bnode-sequence>-->
     <div>
       <a [routerLink]="" (click)="editable=!editable" matTooltip="Edit">
-        <mat-icon *ngIf="editable" [ngStyle]="{'color':'red'}" aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
-        <mat-icon *ngIf="!editable" [ngStyle]="{'color':'black'}" aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
+        <mat-icon *ngIf="editable" [ngStyle]="{'color':'red'}" aria-hidden="false" aria-label="Example home icon">edit
+        </mat-icon>
+        <mat-icon *ngIf="!editable" [ngStyle]="{'color':'black'}" aria-hidden="false" aria-label="Example home icon">
+          edit
+        </mat-icon>
       </a>
 
       <a *ngIf="editable" [routerLink]="" (click)="saveIntoLocalStorage()" matTooltip="Save to Browser Storage">
-        <mat-icon >save</mat-icon>
+        <mat-icon>save</mat-icon>
       </a>
 
-      <button mat-icon-button [matMenuTriggerFor]="menu2" style="text-align: right">
-        <mat-icon>more_vert</mat-icon>
-      </button>
+      <mat-icon [matMenuTriggerFor]="menu2" style="text-align: right" class="pointer">more_vert</mat-icon>
     </div>
 
     <mat-menu #menu2="matMenu" xPosition="before">
@@ -91,15 +91,15 @@
         <a [routerLink]="" (click)="bidEditable=false" matTooltip="Leave Edit">
           <mat-icon>edit_off</mat-icon>
         </a>
-<!--        <app-node-simple-edit [bnode]="bnc.bnode"></app-node-simple-edit>-->
+      <!--        <app-node-simple-edit [bnode]="bnc.bnode"></app-node-simple-edit>-->
       </span>
 
   </div>
 
   <app-bid-list [bnc]="bnc" [subject]="subject" [editable]="editable"></app-bid-list>
 
-<!--  <app-linkable-bnode-list [linkableBnodes]="linkableBnodes"-->
-<!--                           (linkNodeEvent)="linkBnode($event)"></app-linkable-bnode-list>-->
+  <!--  <app-linkable-bnode-list [linkableBnodes]="linkableBnodes"-->
+  <!--                           (linkNodeEvent)="linkBnode($event)"></app-linkable-bnode-list>-->
 
   <input #fileInput type="file" accept=".json" (change)="processFile(fileInput)" style="visibility:hidden">
 </div>
