--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100px; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  background:rgb(15,20,20);
+  //background: rgb(40,40,40);
+}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+color: black}
 
 .mat-body {
-  height: 300px;
+  //height: 20px;
+}
+
+.mat-icon {
+  transform: scale(1.0);
 }
