--- a/src/app/bidding-system-panel/bid-list/bid-list.component.scss
+++ b/src/app/bidding-system-panel/bid-list/bid-list.component.scss
@@ -1,10 +1,19 @@
-.lineheight10 {
+.lineheight10 { //todo
     //line-height: 10px;
   border: 1px solid;
   //color: cornsilk;
 }
 
-table {
+table {  // wofür???
   border-collapse: collapse;
 }
 
+
+.opp {
+  background: #ffe480;
+}
+
+
+.pointer {
+  cursor: pointer;
+}
