--- a/src/app/bidding-system-panel/bidding-system-panel.component.scss
+++ b/src/app/bidding-system-panel/bidding-system-panel.component.scss
@@ -8,7 +8,7 @@
   //background-image: url("./../../assets/background.png");
   display: inline-block;
   vertical-align: middle;
-  margin-left: 30px;
+  margin-left: 100px;
   margin-top: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -22,6 +22,13 @@
 
 .opp {
   background: #ffe480;
+}
+
+.con {
+  //background: green;
+  //color: white;
+  margin: 5px;
+  font-size: 13pt;
 }
 
 .desc {
