--- a/src/app/strain-symbol/strain-symbol.component.scss
+++ b/src/app/strain-symbol/strain-symbol.component.scss
@@ -2,13 +2,22 @@
   color:rgb(3, 3, 43);
 }
 
-.blue {
-  color:blue;
+.club {
+  color: blue;
 }
 
-.red {
+.spade {
+  color:darkblue;
+}
+
+.heart {
   color: red;
 }
+
+.diamond {
+  color: deeppink;
+}
+
 
 .nobid {
   color: whitesmoke;
