--- a/src/app/bidding-system-panel/bidding-system-panel.component.scss
+++ b/src/app/bidding-system-panel/bidding-system-panel.component.scss
@@ -8,7 +8,7 @@
   //background-image: url("./../../assets/background.png");
   display: inline-block;
   vertical-align: middle;
-  margin-left: 100px;
+  margin-left: 10px;
   margin-top: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -40,4 +40,8 @@
 
 .mat-icon {
   font-size: 25px;  // only in this component
+}
+
+.pointer {
+  cursor: pointer;
 }
