--- a/src/app/bid-edit/bid-edit.component.html
+++ b/src/app/bid-edit/bid-edit.component.html
@@ -2,19 +2,19 @@
   <div class="item">
     Bid:
   </div>
-  <div><input [(ngModel)]="data.bid" size="10"/></div>
+  <div><input [(ngModel)]="data.bid" size="10" [disabled]="viewOnly"/></div>
   <div class="item">
     Condition:
   </div>
-  <div><input [(ngModel)]="data.condition" size="60"/></div>
+  <div><input [(ngModel)]="data.condition" size="60"  [disabled]="viewOnly"/></div>
   <div class="item">
     Description:
   </div>
-  <div><input [(ngModel)]="data.description" size="60"/></div>
+  <div><input [(ngModel)]="data.description" size="60"  [disabled]="viewOnly"/></div>
   <div class="item">
     Opp's Bidding:
   </div>
-  <div><input type=checkbox [(ngModel)]="data.oppsBid" size="50"/>
+  <div><input type=checkbox [(ngModel)]="data.oppsBid" size="50"  [disabled]="viewOnly"/>
 
 <!--    <span (click)="showLinkedDetails()">Linked bids</span>-->
 
@@ -26,22 +26,11 @@
 </div>
 
 
-
-
-
-
-<!--<input [(ngModel)]="data.description">-->
-
-<!--&lt;!&ndash;<h1 mat-dialog-title>Hi {{data.bid}}</h1>&ndash;&gt;-->
-<!--<div mat-dialog-content>-->
-<!--  <p>Bid</p>-->
-<!--&lt;!&ndash;  <p>Bid</p>&ndash;&gt;-->
-<!--&lt;!&ndash;    Description&ndash;&gt;-->
-<!--&lt;!&ndash;    <input [(ngModel)]="data.description">&ndash;&gt;-->
-<!--</div>-->
-
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data" >Ok</button>
+  <button mat-button (click)="onNoClick()">Cancel</button>
+  <button *ngIf="!viewOnly" mat-button [mat-dialog-close]="data" >Ok</button>
+  <button *ngIf="!viewOnly" mat-button [mat-dialog-close]="data" (click)="data.linkableNode=true">Make Node Linkable
+    <mat-icon aria-hidden="false" aria-label="Example home icon">add_link</mat-icon>
+  </button>
 </div>
 
