renaming and system saved message

--- a/src/app/bidding-system-panel/bidding-system-panel.component.html
+++ b/src/app/bidding-system-panel/bidding-system-panel.component.html
@@ -80,9 +80,9 @@
       <!--      <a [routerLink]="" (click)="editable=true" matTooltip="Edit">-->
       <!--        <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>-->
       <!--      </a>-->
-      <a *ngIf="editable" [routerLink]="" (click)="markAsLinkable()" matTooltip="Mark as linkable Node">
-        <mat-icon aria-hidden="false" aria-label="Example home icon">add_link</mat-icon>
-      </a>
+<!--      <a *ngIf="editable" [routerLink]="" (click)="markAsLinkable()" matTooltip="Mark as linkable Node">-->
+<!--        <mat-icon aria-hidden="false" aria-label="Example home icon">add_link</mat-icon>-->
+<!--      </a>-->
       <!--      <a [routerLink]="" (click)="showStatistics()" matTooltip="statistics">-->
       <!--        <mat-icon>analytics</mat-icon>-->
       <!--      </a>-->
@@ -100,7 +100,7 @@
 <!--      </span>-->
 <!--  </div>-->
 
-  <app-bid-list [bnc]="bnc" [subject]="subject" [editable]="editable"></app-bid-list>
+  <app-bid-list [bnc]="bnc" [subject]="$nodeAppended" [editable]="editable"></app-bid-list>
 
   <!--  <app-linkable-bnode-list [linkableBnodes]="linkableBnodes"-->
   <!--                           (linkNodeEvent)="linkBnode($event)"></app-linkable-bnode-list>-->
