--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 
 <div class="line"></div>
 <div class="main">
-  <div  [ngClass]="{'visable': x, 'nonvisable' : !x }">
+  <div  [ngClass]="{'visable': biddingSystem, 'nonvisable' : !biddingSystem }">
     <app-bidding-system-panel></app-bidding-system-panel>
   </div>
 </div>
