visual improvements; start with supabase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <span>Bridge Explorer</span>
   <span class="m4"> </span>
 
-  <span class="ic" (click)="bidding()">	<mat-icon> local_library</mat-icon></span>
+  <span class="ic" (click)="bidding()">	<mat-icon> inventory</mat-icon></span>
 
 
   <mat-icon [matMenuTriggerFor]="entries" class="pointer">menu</mat-icon>
