--- a/src/app/bidding-system-panel/bid-list/bid-item/bid-item.component.html
+++ b/src/app/bidding-system-panel/bid-list/bid-item/bid-item.component.html
@@ -1,19 +1,19 @@
 <td *ngIf="newNode" style="float:right">
   <input [(ngModel)]="bnc.bnode.bid" size="2"/>
 </td>
-<td *ngIf="!newNode" (click)="selectBid(bnc)" class="min20 pointer"
-    style="float:right; font-size: 13pt" >
+<td *ngIf="!newNode" (click)="selectBid(bnc)" class="pointer"
+    style="float:right; height:15px; font-size: 20px" >
   <span [ngClass]="{'opp': bnc.bnode.ob}">
-  <app-strain-symbol *ngIf="!editable" [strain]="bnc.bid"></app-strain-symbol>
-  <app-strain-symbol *ngIf="editable" [strain]="bnc.bnode.bid"></app-strain-symbol>
+  <app-strain-symbol *ngIf="!editable" [strain]="bnc.bid" matTooltip='{{bnc.bnode.desc}}'></app-strain-symbol>
+  <app-strain-symbol *ngIf="editable" [strain]="bnc.bnode.bid" matTooltip='{{bnc.bnode.desc}}'></app-strain-symbol>
   </span>
 </td>
 
-<td *ngIf="normal">
-  <div class="pointer">
-    <mat-icon *ngIf="bnc.bnode.desc" matTooltip='{{bnc.bnode.desc}}' (click)="normal=false">info</mat-icon>
-  </div>
-</td>
+<!--<td *ngIf="normal">-->
+<!--  <div class="pointer">-->
+<!--    <mat-icon *ngIf="bnc.bnode.desc" matTooltip='{{bnc.bnode.desc}}' (click)="normal=false">info</mat-icon>-->
+<!--  </div>-->
+<!--</td>-->
 <td *ngIf="normal && editable ">
   <input [(ngModel)]="bnc.bnode.con" size="50" (input)="checkCondition()"
          (keydown.enter)="addOdeleteBid(bnc.bnode)"
@@ -34,10 +34,7 @@
 
 <td>
   <span *ngIf="!newNode && editable" (click)="addOdeleteBid(bnc.bnode)" class="mat-cell">
-    <!--      <i class="material-icons">-->
-    <!--        delete-->
-    <!--      </i>-->
-    <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
+    <mat-icon style="height:15px; font-size: 20px">delete</mat-icon>
   </span>
   <span *ngIf="newNode" (click)="addOdeleteBid(bnc.bnode)" class="mat-cell" tabindex="1" class="pointer">
     <i class="material-icons">
