--- a/src/app/bidding-system-panel/bid-list/bid-item/bid-item.component.scss
+++ b/src/app/bidding-system-panel/bid-list/bid-item/bid-item.component.scss
@@ -6,6 +6,18 @@ input:disabled {
   cursor: pointer;
 }
 
+.min20 {
+  height:4px;
+}
 .opp {
   background: #ffe480;
 }
+
+
+//input{
+//  width:100%;
+//  //line-height:38px;
+//  height:18px;
+//  display:block;
+//  text-align:center;
+//}
