add gap in menu; add settings attributes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
 
   <mat-icon [matMenuTriggerFor]="entries" class="pointer">menu</mat-icon>
 
+  <span class="example-spacer"></span>
+  <span> Hi</span>
+
 
   <mat-menu #entries="matMenu">
     <button mat-menu-item routerLink="biddingsystem">
