--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,2 @@
-<app-deal [deal]="deal" [players]="players"></app-deal>
+<app-deal [deal]="deal" [players]="players" [subject]="subject"></app-deal>
+<button (click)="shuffle()"> Shuffle </button>
