--- a/src/app/service/app.component.scss
+++ b/src/app/service/app.component.scss
@@ -53,11 +53,13 @@
 }
 
 .visable {
-  visibility: visible;
+  //visibility: visible;
+  display: inline;
 }
 
 .nonvisable {
-  visibility: hidden;
+  //visibility: hidden;
+  display: none;
 }
 
 .example-spacer {
