--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
   <span class="m4"> </span>
 
   <span class="ic" (click)="bidding()">	<mat-icon> inventory</mat-icon></span>
-  <span class="ic" (click)="board=true">	board <mat-icon> grid-large</mat-icon></span>
+  <span class="ic" (click)="board=!board">	board <mat-icon> grid-large</mat-icon></span>
+  <span class="ic" (click)="condition=!condition">	condition <mat-icon> grid-large</mat-icon></span>
 
 
   <mat-icon [matMenuTriggerFor]="entries" class="pointer">menu</mat-icon>
@@ -39,13 +40,16 @@
 
 <div class="line"></div>
 <div class="main">
-  <div  [ngClass]="{'visable': biddingSystem, 'nonvisable' : !biddingSystem }">
+  <div [ngClass]="{'visable': biddingSystem, 'nonvisable' : !biddingSystem }">
     <app-bidding-system-panel></app-bidding-system-panel>
   </div>
-  <div  [ngClass]="{'visable': board, 'nonvisable' : !board }">
+  <div [ngClass]="{'visable': board, 'nonvisable' : !board }">
     <app-board></app-board>
   </div>
-  <div  [ngClass]="{'visable': configuration, 'nonvisable' : !configuration }">
+  <div [ngClass]="{'visable': configuration, 'nonvisable' : !configuration }">
     <app-config-maintenance></app-config-maintenance>
+  </div>
+  <div [ngClass]="{'visable': configuration, 'nonvisable' : !condition }">
+    <app-one-hand-generator></app-one-hand-generator>
   </div>
 </div>
