improvments and fixes for one hand generator

--- a/src/app/one-hand-generator/one-hand-generator.component.html
+++ b/src/app/one-hand-generator/one-hand-generator.component.html
@@ -1,6 +1,7 @@
 <div></div>
-<app-condition-entry [hg$]="hg$" ></app-condition-entry>
-<button (click)="shuffle()"> Shuffle</button>
+<app-condition-entry [hg$]="hg$" [sp$]="sp$" ></app-condition-entry>
+<button (click)="shuffle()" [disabled]="!shufflePossible"> Shuffle</button>
+<span class="white"> Hands generated: {{recentTries}}</span>
 <div>a</div>
 <app-hand *ngIf="generated" [cards]="cards[0]"></app-hand>
 
