--- a/src/app/hand/hand.component.html
+++ b/src/app/hand/hand.component.html
@@ -1,3 +1,4 @@
+<div>
 <div *ngFor="let suit of cards.slice().reverse(); let i = index">
 
   <app-strain-symbol [suitNo]="3-i"></app-strain-symbol>
@@ -5,3 +6,4 @@
 </div>
 
 
+</div>
