--- a/src/app/condition-entry/condition-entry.component.html
+++ b/src/app/condition-entry/condition-entry.component.html
@@ -1,3 +1,3 @@
-<div><input [(ngModel)]="condition" size="60"
+<input [(ngModel)]="condition" size="60"
        [ngClass]="{'parsingNotOk': !ok}" (ngModelChange)="check()"/>
-</div>
+
