--- a/src/app/service/app.component.scss
+++ b/src/app/service/app.component.scss
@@ -65,3 +65,16 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.bidjar {
+  //background: rgb(230,230,230);
+  //background-color: rgba(0,99,121,0.95);
+  //background-image: url("./../../assets/background.png");
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 30px;
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
