add remote double dummy analysis

--- a/src/app/deal/deal.component.html
+++ b/src/app/deal/deal.component.html
@@ -38,7 +38,7 @@
               <app-hand [cards]="cards[0]"></app-hand>
             </td>
             <td>
-              <app-double-dummy-tricks ></app-double-dummy-tricks> //TODO
+              <app-double-dummy-tricks [deal]="deal" ></app-double-dummy-tricks>
             </td>
           </tr>
         </table>
